banner section and photo size bug fixed.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <!-- navigation bar -->
         <nav class="container">
             <div class="logo">
@@ -49,6 +49,7 @@
                     <img src="./cosmic-world-resources-main/images/banner.png" alt="">
                 </din>
             </div>
+        </section>
     </header>
 
     <main class="container">
